--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@
 # ===============================
 # Set here configurations for the database connection
 spring.datasource.url=jdbc:mariadb://localhost:3306/facultad
-spring.datasource.username=admin
+spring.datasource.username=develop
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+
+patterns.password=
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle=true
 #spring.datasource.validationQuery=SELECT 1
